generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_type_cast_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
value9 as i32

AST:
(source_file
  (expression_statement
    (type_cast_expression
      (identifier value9)
      (primitive_type)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
