generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_type_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
type TestType1 = i32;

AST:
(source_file
  (type_item
    (type_identifier)
    (primitive_type)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestType1",
            line_number: 1,
            definition_type: TypeDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
