generated-tests/tests/snapshots/rust/generated_tests__rust__test_generated_unit_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var9: () = ();

AST:
(source_file
  (let_declaration
    (identifier var9)
    (unit_type)
    (unit_expression)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var9",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "var9",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 9,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
